--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -83,79 +83,73 @@
         🎤
     </button>-->
     <!--初版搜尋-->
-    <!--<div class="app">
-        <router-view></router-view>
-    </div>
-    <script type="text/x-template" id="filter-template">
-        <tbody>
-            <h1>123{{fliterList}}</h1>
-        </tbody>
-    </script>-->
 
-    <div class="app container px-4 py-5" id="mySelected">
-        <h2 class="pb-2 border-bottom">
-            探索更多<!--{{fliterList.length}}-->
-        </h2>
-        <!--篩選-->
-        <div style="width: 300px;">
-            <select onchange="filterchiose(this)" style="box-shadow: none;" class="form-select" aria-label="Default select example">
-                <option value="1" selected>熱門</option>
-                <option value="2">最新</option>
-                <option value="3">募資金額</option>
-                <option value="4">募資人數</option>
-            </select>
-        </div>
-        <!--篩選-->
-        <!--v-for="item in fliterList"-->
-        <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
-            <a href="./product.html" style="text-decoration: none; color: black;" v-on:click="getproductID(item)" v-for="item in fliterList">
-                <div class="feature col">
-                    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#collection" />
-                        </svg>
-                    </div>
+        <div class="app container px-4 py-5" id="mySelected">
+            <h2 class="pb-2 border-bottom">
+                探索更多<!--{{fliterList.length}}-->
+            </h2>
+            <!--篩選-->
+            <div style="width: 300px;">
+                <select onchange="filterchiose(this)" style="box-shadow: none;" class="form-select" aria-label="Default select example">
+                    <option value="1" selected>熱門</option>
+                    <option value="2">最新</option>
+                    <option value="3">募資金額</option>
+                    <option value="4">募資人數</option>
+                </select>
+            </div>
+            <!--篩選-->
+            <!--v-for="item in fliterList"-->
+            <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
+                <a href="./product.html" style="text-decoration: none; color: black;" v-on:click="getproductID(item)" v-for="item in fliterList">
+                    <div class="feature col">
+                        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                            <svg class="bi" width="1em" height="1em">
+                                <use xlink:href="#collection" />
+                            </svg>
+                        </div>
 
-                     <!--資訊卡--> 
-                    <div class="selectedimgdiv">
-                        <img class="selectedimg" :src="item.coverphoto" alt="">
-                    </div>
-                    <p></p>
-                    <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
-                    <div class="d-flex justify-content-between">
-                        <p style="font-weight:bold">$ {{item.currentAmount | money}}</p>
-                        <span>{{item.nowperson}} 人支持</span>
-                    </div>
+                        <!--資訊卡-->
+                        <div class="selectedimgdiv">
+                            <img class="selectedimg" :src="item.coverphoto" alt="">
+                        </div>
+                        <p></p>
+                        <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
+                        <div class="d-flex justify-content-between">
+                            <p style="font-weight:bold">$ {{item.currentAmount | money}}</p>
+                            <span>{{item.nowperson}} 人支持</span>
+                        </div>
 
-                     <!--進度條--> 
-                    <div class="progress" style="height: 10px;">
-                        <div class="progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        <!--進度條-->
+                        <div class="progress" style="height: 10px;">
+                            <div class="progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="pb-2"></div>
+                        <div class="d-flex justify-content-between">
+                            <span>剩下{{item.days}} 天</span>
+                            <span class="money" style="color:green">{{item.percent}} %</span>
+                        </div>
                     </div>
-                    <div class="pb-2"></div>
-                    <div class="d-flex justify-content-between">
-                        <span>剩下{{item.days}} 天</span>
-                        <span class="money" style="color:green">{{item.percent}} %</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <br>
-        <br>
-        <br>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <li class="page-item    ">
-                    <a class="page-link">Previous</a>
-                </li>
-                <li class="page-item" v-for="(n,key) in tolpage"><a class="page-link" href="#">{{key+1}}</a></li>
-                <!--<li class="page-item"><a class="page-link" href="#">2</a></li>
+                </a>
+            </div>
+            <br>
+            <br>
+            <br>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item    ">
+                        <a class="page-link">Previous</a>
+                    </li>
+                    <li :class="{'page-item active':topage==n,'page-item':topage!=n}" v-for="(n,key) in tolpage"><a class="page-link" v-on:click="whatpage(key,n)" href="#">{{n}}</a></li>
+                    <!--<li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>-->
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+                    <li class="page-item">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+ 
 
     <!-- UI code goes here -->
     <!--<div id="warning">
@@ -303,77 +297,26 @@
             })
         }
         /*篩選*/
-        //var ddd = [{ "id": 1 }, { "id": 2 }, { "id": 2 }]
-
-        //var filterPageComponent = {
-        //    template: "#filter-template",
-        //    data: function () {
-        //        return {
-        //            fliterList: 0
-        //        }
-        //    }
-        //    ,
-        //    beforeMount() {
-        //        $.ajax({
-        //            type: 'Get',
-        //            url: '/api/Fundraising',
-        //            success: function (e) {
-        //           /*     console.log(1313)*/
-        //                console.log(this.fff)
-        //            }
-        //        })
-        //    }
-        //    ,
-        //    mounted: function (){
-        //    /*    alert(123);*/
-        //        $.ajax({
-        //            type: 'Get',
-        //            url: '/api/Fundraising',
-        //            success: function (e) {
-        //                console.log(filterPageComponent)
-        //            }
-        //        })
-        //    }
-        //    //,
-        //    //methods: {
-        //    //    gotopage2: function () {
-        //    //        router.push("/page2?param1=100");
-        //    //    }
-        //    //}
-        //};
-
-        //var page2Component = {
-        //    template: "#page2-template",
-        //    data: function () {
-        //        return {
-        //            param1Value: this.$route.query.param1
-        //        }
-        //    }
-        //};
-
-        //const routes = [
-        //    { path: "/filter", name: "filter", component: filterPageComponent}
-        //    /*            { path: "/page2", name: "page2", component: page2Component }*/
-        //];
-
-        //const router = new VueRouter({
-        //    routes
-        //});
         
         var app = new Vue({
             el: ".app",
-            //router: router,
-            //beforeMount() {
-            //    router.push("/filter");
-            //}
-            //,
             data: {
                 fliterList: [],
-                tolpage: 0
+                tolpage: 0,
+                topage:0
             },
+            beforeMount() {
+                var apitopage = (sessionStorage.getItem("topage") == null) ? 0 : sessionStorage.getItem("topage")
+                $.ajax({
+                    type: 'Get',
+                    url: '/api/Fundraising/topage/' + parseInt(apitopage),
+                    success: function (e) {
+                        app.fliterList = e
+                    }
+                })
+            }
+            ,
             mounted: function () {
-                //alert(123)
-                //document.querySelector('.wid').style.width = '10%'
                 $.ajax({
                     type: 'Get',
                     url: '/api/Fundraising/tolpage',
@@ -381,14 +324,9 @@
                         app.tolpage = parseInt(e);
                     }
                 })
-                $.ajax({
-                    type: 'Get',
-                    url: '/api/Fundraising',
-                    success: function (e) {
-                        app.fliterList = e
-                     /*   console.log(e)*/
-                    }
-                })
+                var apitopage = (sessionStorage.getItem("topage") == null) ? 0 : sessionStorage.getItem("topage")
+                this.topage = parseInt(apitopage)+1
+                console.log(this.topage)
             }
             ,
             methods: {
@@ -396,9 +334,15 @@
                     /* console.log(e.productId)*/
                     sessionStorage.setItem("productId", e.productId);
                 }
+                ,
+                whatpage: function (e,n) {
+                    sessionStorage.setItem("topage", e);
+                    app.topage = n
+                    console.log(app.topage)
+                    window.location = "./filter.html"
+                }
             }
         })
-        console.log(app)
 
 
 
