首頁輪播圖要改 不能用vue

--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -165,10 +165,9 @@
     <div id="app">
 
         <div class="headerpage"></div>
-
         <!-- 輪播圖 -->
         <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
-            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider1.png" alt=""></a></div>
+            <div class="gallery-cell"><a href="./product.html"><img src="../img/slider2.png" alt=""></a></div>
             <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider2.png" alt=""></a></div>
             <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider3.png" alt=""></a></div>
             <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider4.png" alt=""></a></div>
