員工&資料 資料庫尚未建立

--- a/Fundraising/wwwroot/CMS/Odetails.html
+++ b/Fundraising/wwwroot/CMS/Odetails.html
@@ -120,12 +120,12 @@
                                                         <div class="mb-1">加碼贊助: </div>
                                                         <div style="font-size: 1.3rem;">總金額: </div>
                                                     </div>
-                                                    <div class="col-1 text-right">
+                                                    <div class="text-right pr-3">
                                                         <div>NT$ </div>
                                                         <div class="mb-1">NT$ </div>
                                                         <div style="font-size: 1.3rem;">NT$</div>
                                                     </div>
-                                                    <div class="col-1 text-right p-0">
+                                                    <div class=" text-right p-0">
                                                         <div>{{odetailsinfo.planPrice}}</div>
                                                         <div class="mb-1">{{odetailsinfo.addSponsorship}} </div>
                                                         <div style="font-size: 1.3rem;">{{odetailsinfo.planPrice +
