--- a/Fundraising/wwwroot/CMS/index.html
+++ b/Fundraising/wwwroot/CMS/index.html
@@ -206,7 +206,7 @@
                                                 </tr>
                                                 <tr v-for="item in mydata.newmember">
                                                     <td v-cloak><img :src="item.userPhoto" alt=""
-                                                            class="img-fluid rounded-circle border-secondar"></td>
+                                                            class="imgset rounded-circle border-secondar"></td>
                                                     <td v-cloak>{{item.userName}}</td>
                                                     <td v-cloak>{{item.userIntro}}</td>
                                                     <td v-cloak><a class="btn btn-outline-success" data-toggle="modal"
