--- a/Fundraising/wwwroot/CMS/message.html
+++ b/Fundraising/wwwroot/CMS/message.html
@@ -92,7 +92,7 @@
                                                     <div class="row">
 
                                                         <div v-cloak class="col-1"><img :src="comitem.comuser.userPhoto"
-                                                                alt="" class="rounded-circle border img-fluid"></div>
+                                                                alt="" class="rounded-circle border imgset"></div>
                                                         <div class="col-9">
                                                             <div class="d-flex justify-content-between">
                                                                 <h4 v-cloak>{{comitem.comuser.userName}}</h4>
@@ -120,7 +120,7 @@
                                                             data-parent="#accordionSidebar">
                                                             <div class="bg-white py-2 row">
                                                                 <div class="col-1"><img :src="ansitem.ansUser.userPhoto"
-                                                                        alt="" class="rounded-circle border img-fluid">
+                                                                        alt="" class="rounded-circle border imgset">
                                                                 </div>
                                                                 <div class="col-9">
                                                                     <div class="d-flex justify-content-between">
