--- a/Fundraising/wwwroot/CMS/checkrefund.html
+++ b/Fundraising/wwwroot/CMS/checkrefund.html
@@ -60,7 +60,7 @@
                                             <table class="table mb-0">
                                                 <thead class="thead-dark">
                                                     <tr>
-                                                        <th colspan="6" class="h3 p-2">贊助編號: {{odetailsinfo.orderId}}
+                                                        <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak>{{odetailsinfo.orderId}}</span>
                                                         </th>
                                                     </tr>
                                                 </thead>
@@ -68,31 +68,31 @@
                                                     <tr>
                                                         <td>會員名稱:</td>
                                                         <td>
-                                                            <p>{{odetailsinfo.recipientName}}</p>
+                                                            <p v-cloak>{{odetailsinfo.recipientName}}</p>
                                                         </td>
                                                         <td>贊助日期:</td>
                                                         <td>
-                                                            <p>{{odetailsinfo.purchaseTime}}</p>
+                                                            <p v-cloak>{{odetailsinfo.purchaseTime}}</p>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td>手機:</td>
                                                         <td>
-                                                            <p>{{odetailsinfo.recipientPhone}}</p>
+                                                            <p v-cloak>{{odetailsinfo.recipientPhone}}</p>
                                                         </td>
                                                         <td>信箱:</td>
                                                         <td>
-                                                            <p>{{odetailsinfo.recipientMail}}</p>
+                                                            <p v-cloak>{{odetailsinfo.recipientMail}}</p>
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td>信用卡號:</td>
                                                         <td>
-                                                            <p>{{odetailsinfo.masterCardId}}</p>
+                                                            <p v-cloak>{{odetailsinfo.masterCardId}}</p>
                                                         </td>
                                                         <td>送貨地址:</td>
                                                         <td colspan="3">
-                                                            <p>{{odetailsinfo.recipientAddress}}</p>
+                                                            <p v-cloak>{{odetailsinfo.recipientAddress}}</p>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -112,26 +112,26 @@
                                                 <div class="col-8">
                                                     <div class="row">
                                                         <div class="col-12">
-                                                            <h3>{{odetailsinfo.planTitle}}</h3>
+                                                            <h3 v-cloak>{{odetailsinfo.planTitle}}</h3>
                                                         </div>
                                                         <div class="col-12 mb-3">
                                                             選擇的贊助內容
                                                         </div>
-                                                        <div class="col-7">{{odetailsinfo.planContent}}</div>
+                                                        <div class="col-7" v-cloak>{{odetailsinfo.planContent}}</div>
                                                         <div class="col-2  pr-3">
                                                             <div>方案金額: </div>
                                                             <div class="mb-1">加碼贊助: </div>
                                                             <div style="font-size: 1.3rem;">總金額: </div>
                                                         </div>
-                                                        <div class="col-1 text-right">
+                                                        <div class="text-right pr-3">
                                                             <div>NT$ </div>
                                                             <div class="mb-1">NT$ </div>
                                                             <div style="font-size: 1.3rem;">NT$</div>
                                                         </div>
-                                                        <div class="col-1 text-right p-0">
-                                                            <div>{{odetailsinfo.planPrice}}</div>
-                                                            <div class="mb-1">{{odetailsinfo.addSponsorship}} </div>
-                                                            <div style="font-size: 1.3rem;">{{odetailsinfo.planPrice +
+                                                        <div class=" text-right p-0">
+                                                            <div v-cloak>{{odetailsinfo.planPrice}}</div>
+                                                            <div class="mb-1" v-cloak>{{odetailsinfo.addSponsorship}} </div>
+                                                            <div style="font-size: 1.3rem;" v-cloak>{{odetailsinfo.planPrice +
                                                                 odetailsinfo.addSponsorship}}</div>
                                                         </div>
                                                     </div>
