--- a/Fundraising/wwwroot/CMS/profile.html
+++ b/Fundraising/wwwroot/CMS/profile.html
@@ -54,43 +54,41 @@
                                 </div>
                                 <div class="row justify-content-center p-5 ">
                                     <div class="col-6">
-                                        <form class="text-center">
-                                            <img src="img/undraw_profile.svg" alt=""
-                                                style="height: 150px; width: 150px;">
-                                            <h3 class="p-3">朱小名</h3>
-                                            <div class="form-group d-flex justify-content-center">
-                                                <div class="col-10">
-                                                    <div class="input-group">
-                                                        <div class="input-group-prepend">
-                                                            <div class="input-group-text">
-                                                                <i class="fa fa-address-card"></i>
-                                                            </div>
-                                                        </div>
-                                                        <input id="account" name="account" type="text"
-                                                            class="form-control" disabled>
-                                                    </div>
-                                                </div>
+                                        <form class=""></form>
+                                        <div class="row justify-content-around">
+                                            <div class="col-5 " >
+                                                <img src="img/undraw_profile.svg" alt=""
+                                                    style="height: 150px; width: 150px;" class="d-block mx-auto">
+                                                    <input type="file" name="" id="" class="py-3">
+                                                <h3 class="p-0 text-center">朱小名</h3>
+                                                <label for="">帳號:</label> <br>
+                                                <input type="text" name="" id="" class="w-100"> <br>
+                                                <label for="">密碼:</label> <br>
+                                                <input type="text" name="" id="" class="w-100">
                                             </div>
-                                            <div class="form-group d-flex justify-content-center">
-                                                <div class="col-10">
-                                                    <div class="input-group">
-                                                        <div class="input-group-prepend">
-                                                            <div class="input-group-text">
-                                                                <i class="fa fa-key"></i>
-                                                            </div>
-                                                        </div>
-                                                        <input id="password" name="password" type="text"
-                                                            class="form-control" placeholder="輸入密碼">
-                                                    </div>
-                                                </div>
+                                            <div class="col-5 d-flex flex-column justify-content-end">
+                                                <label for="">Email</label>
+                                                <input type="text" class="w-100">
+                                                <label for="">電話</label> 
+                                                <input type="text" class="w-100"> 
+                                                <label for="">性別</label> 
+                                                <input type="text" class="w-100"> 
+                                                <label for="">職位</label> 
+                                                <input type="text" class="w-100">
+                                                <label for="">在職狀態</label> 
+                                                <input type="text" class="w-100"> 
                                             </div>
-                                            <div class="form-group  d-flex justify-content-center">
-                                                <div class="col-10">
+
+                                            
+                                                <div class="col-12 text-center mt-3">
                                                     <button name="submit" type="submit" class="btn btn-primary px-5 ">
                                                         提交
                                                     </button>
                                                 </div>
                                             </div>
+
+
+                                        </div>
                                         </form>
                                     </div>
                                 </div>
@@ -111,7 +109,7 @@
         </a>
     </div>
 
-    
+
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
