--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -14,7 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!--<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
     <style>
@@ -163,7 +164,7 @@
 
 <body >
     <div id="app">
-
+        <!--<h1>{{featuredList[0]}}</h1>-->
         <div class="headerpage"></div>
         <!-- 輪播圖 -->
         <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
@@ -295,15 +296,25 @@
     <script src="../layout/layout.js"></script>
 
     <script>
-        const app = {
-            data() {
-                return {
+        var app = new Vue({
+            el: "#app",
+            data: {
                     featuredList: [],
                     recentList: [],
                     message: 'word'
-                }
             },
-            mounted() {
+            beforeMount() {
+                //var apitopage = (sessionStorage.getItem("topage") == null) ? 0 : sessionStorage.getItem("topage")
+                //$.ajax({
+                //    type: 'Get',
+                //    url: '/api/Fundraising/topage/' + parseInt(apitopage),
+                //    success: function (e) {
+                //        app.fliterList = e
+                //    }
+                //})
+            }
+            ,
+            mounted: function () {
                 axios.get('/api/Fundraising/featured')//精選
                     .then((res) => {
                         this.featuredList = res.data;
@@ -318,12 +329,48 @@
                     .catch(function (error) {
                         console.log(error);
                     });
-            },
-            methods() {
+            }
+            ,
+            methods: {
+                getproductID: function (e) {
+                    /* console.log(e.productId)*/
+                    sessionStorage.setItem("productId", e.productId);
+                }
+            }
+        })
 
-            },
-        };
-        Vue.createApp(app).mount("#app");
+        //const app = {
+        //    data() {
+        //        return {
+        //            featuredList: [],
+        //            recentList: [],
+        //            message: 'word'
+        //        }
+        //    },
+        //    mounted() {
+        //        axios.get('/api/Fundraising/featured')//精選
+        //            .then((res) => {
+        //                this.featuredList = res.data;
+        //            })
+        //            .catch(function (error) {
+        //                console.log(error);
+        //            });
+        //        axios.get('/api/Fundraising/recent')//近期
+        //            .then((res) => {
+        //                this.recentList = res.data;
+        //            })
+        //            .catch(function (error) {
+        //                console.log(error);
+        //            });
+        //    },
+        //    methods: {
+        //        getproductID(e) {
+        //            /* console.log(e.productId)*/
+        //            sessionStorage.setItem("productId", e.productId);
+        //        }
+        //    },
+        //};
+        //Vue.createApp(app).mount("#app");
     </script>
 
 </body>
