--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -168,11 +168,11 @@
         <div class="headerpage"></div>
         <!-- 輪播圖 -->
         <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
-            <div class="gallery-cell"><a href="./product.html"><img src="../img/slider1.png" alt=""></a></div>
-            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider2.png" alt=""></a></div>
+            <div class="gallery-cell" v-for="item in featuredList"><a href="./product.html"><img src="./page.png" alt=""></a></div>
+            <!--<div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider2.png" alt=""></a></div>
             <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider3.png" alt=""></a></div>
             <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider4.png" alt=""></a></div>
-            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider5.png" alt=""></a></div>
+            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider5.png" alt=""></a></div>-->
         </div>
 
         <div class="container px-4 py-5" id="mySelected">
